[project]
name = "planetcantile"
version = "0.5.0"
description = "TMS tilesets for Planets"
authors = [
    {name = "Andrew Annex", email = "ama6fy@virginia.edu"}
]
readme = "README.md"
keywords = ["morecantile", "TMS", "TileMatrixSet", "GIS"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License"
]
requires-python = ">=3.10"
license = {text = "BSD License"}
dependencies = [
    "morecantile >=5.4.2",
    "click >=8.1.3",
    "pillow",
    "pyproj >=3.6.1",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "spiceypy",
    "titiler.application",
    "pillow",
    "pytest >=8.3.0",
    "planet-crs-registry-client @ git+https://github.com/AndrewAnnex/planet-crs-registry-client.git@904d36fb32ef85aaef57782f55322b5bb36c1c0b"
]
app = [
    "titiler.application",
    "rio_tiler",
    "starlette",
    "pillow",
    "fastapi",
    "uvicorn",
]

[project.urls]
"Repository" = "https://github.com/AndrewAnnex/planetcantile"

[build-system]
requires = ["setuptools >= 46.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
planetcantile = ["data/v*/*.json",]
